k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot
  labels:
    name: iot
    app: iot-telemetry
